alpha5:
* Items now fall out of an Ender Transmitter.

alpha4:
+ Add support for OpenBlocks crayons/glasses and Thermal Expansion energy storage sending
+ Added heuristic-esque NBT tag detection.
  * This will work on custom books and enchanted items, so you don't need to register these.
* Fix NBT sending over servers.

alpha3:
+ Add /eninfo command for devs to get information on their blocks.
* Fix maps being sendable.

alpha2:
- Remove extra debug code that stopped EnderNet from launching.

alpha1:
/ First release.