@@ -6,11 +6,15 @@ import java.util.ArrayList;
 import java.util.HashMap;
 
 import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
 
 public class EnderServerManager {
 	private HashMap<String, EnderServer> servers = new HashMap<String, EnderServer>();
-	private HashMap<EnderServer, File> saveLocation = new HashMap<EnderServer, File>();
+
+	public void clear() {
+		servers = new HashMap<String, EnderServer>();
+	}
 	
 	public EnderServer get(String name) {
 		return servers.get(name);
@@ -18,8 +22,14 @@ public class EnderServerManager {
 	
 	public String getAddress(String name) {
 		EnderServer server = get(name);
-		if(server != null) return server.address;
+		if(server != null) { System.out.println("Getting address of server -> " + server.address); return server.address; }
 		else return null;
+	}
+	
+	public String getPassword(String name) {
+		EnderServer server = get(name);
+		if(server != null && server.password != null) return server.password;
+		else return "";
 	}
 	
 	public void loadFromJSON(File file) {
@@ -28,14 +38,23 @@ public class EnderServerManager {
 		if(data == null) return; // No data
 		
 		Type arrayType = new TypeToken<ArrayList<EnderServer>>(){}.getType();
-		ArrayList<EnderServer> serverList = gson.fromJson(data, arrayType);
-		for(EnderServer es: serverList) {
-			servers.put(es.name, es);
-			saveLocation.put(es, file);
-		}
+		try {
+			ArrayList<EnderServer> serverList = gson.fromJson(data, arrayType);
+			for(EnderServer es: serverList) {
+				servers.put(es.name, es);
+			}
+		} catch(Exception e) { e.printStackTrace(); }
 	}
 	
 	public void saveToJSON(File file) {
-		
+		Gson gson = new GsonBuilder().setPrettyPrinting().create();
+		ArrayList<EnderServer> serverList = new ArrayList<EnderServer>();
+		serverList.addAll(servers.values());
+		String data = gson.toJson(serverList);
+		FileUtils.save(data, file);
+	}
+
+	public void add(EnderServer es) {
+		servers.put(es.name, es);
 	}
 }
